[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/admin/ban_row.gd" id="1"]

[node name="BanRow" type="HBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
text_overrun_behavior = 3

[node name="ReasonLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
text_overrun_behavior = 3

[node name="UnbanButton" type="Button" parent="."]
layout_mode = 2
text = "Unban"
flat = true
theme_override_colors/font_color = Color(0.345, 0.396, 0.949, 1)
